# psensor

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.in  NEWS  NEWS.html  README  README.html  README.md  config.h.in  configure  configure.ac
debian/: changelog  control  psensor-server.install
doc/: Makefile.am  TODO.html  TODO.txt  faq.html  faq.txt
docker/: docker_build.sh  dockerfile  psensor_build.sh
icons/hicolor/14x14/: Makefile.in
pixmaps/48x48/: Makefile.in
pixmaps/scalable/: Makefile.in
po/: .gitignore  LINGUAS  Makefile.in  POTFILES.in  de.po  el.po  es.po  fr.po  hr.po  hu.po  it.po  lv.po  nl.po  pl.po  psensor.pot  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: .gitignore  Makefile.am  Makefile.in  cfg.c  cfg.h  graph.c  main.c  rsensor.c  ui.c  ui.h  ui_appindicator.c  ui_color.c  ui_graph.c  ui_notify.c  ui_pref.c  ui_pref.h  ui_sensorlist.c  ui_sensorpref.c  ui_sensorpref.h  ui_unity.c
src/glade/: Makefile.in  psensor-pref.glade  psensor.glade
src/lib/: .gitignore  Makefile.am  Makefile.in  amd.c  amd.h  bcm2835.c  bcm2835.h  hdd.c  lmsensor.c  log.c  log.h  measure.c  measure.h  nvidia.c  p_io.c  p_io.h  pio.c  pio.h  plog.c  psensor.c  psensor.h  slog.c
src/libpsensor_json/: Makefile.in
src/plib/: Makefile.in  plib_io.c
src/server/: .gitignore  Makefile.am  Makefile.in  description.txt  server.c  server.h  server_lua.c  sysinfo.c  sysinfo.h
tests/: .gitignore  Makefile.am  Makefile.in
ubuntu-packaging/debian/: control
www/: Makefile.am  Makefile.in  index.lua  psensor.js  style.css
(+10 files in other folders)
